deployments/kubernetes/4-gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ${HOST_NAME}
      secretName: ${HOST_NAME}-tls
  rules:
    - host: ${HOST_NAME}
      http:
        paths:
          - backend:
              serviceName: ${SERVICE_NAME}
              servicePort: 80
